--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </div>
       <script src="js/setting.js"></script>
       <script src="js/draw.js"></script>
-      <script src="js/app1.js"></script>
+      <script src="js/app.js"></script>
 </body>
 </html>
 
